--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # pip3 install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 # pip3 install mmcv==1.2.4 -f https://download.openmmlab.com/mmcv/dist/cu113/torch1.12/index.html
-omegacon==2.3.0
+omegaconf==2.3.0
 timm
 tensorboardX
 einops
