--- a/config/MFNet_mit_b4_nddr_search_freeze.yaml
+++ b/config/MFNet_mit_b4_nddr_search_freeze.yaml
@@ -1,17 +1,21 @@
 in_chans: 3
 num_classes: 9
-arch: "Task2"
+arch: "NAS_Task"
 backbone: 'mit_b4'
 log_level: 'INFO'
+load_task1: "./pretrained/task1.pth"
+load_task2: "./pretrained/task2.pth"
 
 datasets:
-  dataset_name: "MFNet"
+  dataset_name: "MFNetEnhance"
   image_height: 480
   image_width: 640
-  root: "/data/zxh/dataset/MFNet_dataset/"
+  root: "/data1/ZXH/NAS_MRMTL_project/Dataset/MFNet/"
   path1: "visible"
+  path1_HQ: "visible_HQ"
   path1_suffix: ".png"
   path2: "infrared"
+  path2_HQ: "infrared_HQ"
   path2_suffix: ".png"
   label: "label"
   label_suffix: ".png"
@@ -43,12 +47,14 @@ nddr:
   INIT: [0.9, 0.1]
 
 decoder:
-  channels: [128, 256, 640, 1024]
+  channels: [64, 128, 320, 512]
   embed_dim: 512
 
 optimizer: "AdamW"
 
 weights:
+  FACTOR: 1
+  task1: [1, 1]
   task2: [0.5, 1, 1]
 
 train:
@@ -63,6 +69,9 @@ train:
   nepochs: 5000
   warm_up_epoch: 10
   train_scale_array: [0.5, 0.75, 1, 1.25, 1.5, 1.75]
+  Mask:
+   size: 32
+   strategy: "rand_comp"
 
   fix_bias: True
   bn_eps: 1e-3
@@ -75,5 +84,5 @@ eval:
   eval_crop_size: [480, 640]
 
 checkpoint:
-  start_epoch: 50
-  step: 10
+  start_epoch: 10
+  step: 2
