--- a/config/MFNet_mit_b4_cross_att_search_freeze.yaml
+++ b/config/MFNet_mit_b4_cross_att_search_freeze.yaml
@@ -41,7 +41,7 @@ encoder:
 
 nddr:
   SEARCHSPACE: ''
-  NDDR_TYPE: ''
+  NDDR_TYPE: 'cross_attention'
   NDDR_BN_TYPE: 'default'
   BATCH_NORM_MOMENTUM: 0.05
   INIT: [0.9, 0.1]
@@ -84,5 +84,5 @@ eval:
   eval_crop_size: [480, 640]
 
 checkpoint:
-  start_epoch: 2
-  step: 1
+  start_epoch: 0
+  step: 2
