--- a/config/MFNet_mit_b4_cross_nddr_search_freeze_PCGrad.yaml
+++ b/config/MFNet_mit_b4_cross_nddr_search_freeze_PCGrad.yaml
@@ -1,8 +1,10 @@
 in_chans: 3
 num_classes: 9
-arch: "Task2"
+arch: "NAS_Task"
 backbone: 'mit_b4'
 log_level: 'INFO'
+load_task1: "./pretrained/task1.pth"
+load_task2: "./pretrained/task2.pth"
 
 datasets:
   dataset_name: "MFNetEnhance"
@@ -39,7 +41,7 @@ encoder:
 
 nddr:
   SEARCHSPACE: ''
-  NDDR_TYPE: ''
+  NDDR_TYPE: 'cross_nddr'
   NDDR_BN_TYPE: 'default'
   BATCH_NORM_MOMENTUM: 0.05
   INIT: [0.9, 0.1]
@@ -51,6 +53,8 @@ decoder:
 optimizer: "AdamW"
 
 weights:
+  FACTOR: 1
+  task1: [1, 1]
   task2: [0.5, 1, 1]
 
 train:
@@ -63,7 +67,7 @@ train:
   num_workers: 4
   
   nepochs: 5000
-  warm_up_epoch: 10
+  warm_up_epoch: 0
   train_scale_array: [0.5, 0.75, 1, 1.25, 1.5, 1.75]
   Mask:
    size: 32
@@ -80,5 +84,5 @@ eval:
   eval_crop_size: [480, 640]
 
 checkpoint:
-  start_epoch: 50
-  step: 10
+  start_epoch: 0
+  step: 2
