--- a/config/MFNet_mit_b4_nddr_task1_lighter_enhance_weights_lovasz_mosaic_multi.yaml
+++ b/config/MFNet_mit_b4_nddr_task1_lighter_enhance_weights_lovasz_mosaic_multi.yaml
@@ -1,21 +1,17 @@
 in_chans: 3
 num_classes: 9
-arch: "NAS_Task"
+arch: "Task1"
 backbone: 'mit_b4'
 log_level: 'INFO'
-load_task1: "./pretrained/task1.pth"
-load_task2: "./pretrained/task2.pth"
 
 datasets:
-  dataset_name: "MFNetEnhance"
+  dataset_name: "MFNet"
   image_height: 480
   image_width: 640
   root: "/data1/ZXH/NAS_MRMTL_project/Dataset/MFNet/"
   path1: "visible"
-  path1_HQ: "visible_HQ"
   path1_suffix: ".png"
   path2: "infrared"
-  path2_HQ: "infrared_HQ"
   path2_suffix: ".png"
   label: "label"
   label_suffix: ".png"
@@ -41,7 +37,7 @@ encoder:
 
 nddr:
   SEARCHSPACE: ''
-  NDDR_TYPE: 'cross_attention'
+  NDDR_TYPE: ''
   NDDR_BN_TYPE: 'default'
   BATCH_NORM_MOMENTUM: 0.05
   INIT: [0.9, 0.1]
@@ -53,21 +49,19 @@ decoder:
 optimizer: "AdamW"
 
 weights:
-  FACTOR: 1
   task1: [1, 1]
-  task2: [0.5, 1, 1]
 
 train:
-  lr: 3e-6
+  lr: 6e-5
   lr_power: 0.9
   momentum: 0.9
   weight_decay: 0.01
   
-  batch_size: 4
+  batch_size: 12
   num_workers: 4
   
   nepochs: 5000
-  warm_up_epoch: 0
+  warm_up_epoch: 10
   train_scale_array: [0.5, 0.75, 1, 1.25, 1.5, 1.75]
   Mask:
    size: 32
@@ -84,5 +78,5 @@ eval:
   eval_crop_size: [480, 640]
 
 checkpoint:
-  start_epoch: 0
+  start_epoch: 20
   step: 2
