--- a/config/FMB_mit_b4_nddr_task2_mask_loss_patch_sd_64_mosaic_grad_weights_higher_norm.yaml
+++ b/config/FMB_mit_b4_nddr_task2_mask_loss_patch_sd_64_mosaic_grad_weights_higher_norm.yaml
@@ -1,16 +1,14 @@
 in_chans: 3
-num_classes: 9
-arch: "NAS_Task"
+num_classes: 15
+arch: "Task2"
 backbone: 'mit_b4'
 log_level: 'INFO'
-load_task1: "./pretrained/MFNet/task1.pth"
-load_task2: "./pretrained/MFNet/task2.pth"
 
 datasets:
-  dataset_name: "MFNetEnhance"
-  image_height: 480
-  image_width: 640
-  root: "/data1/ZXH/NAS_MRMTL_project/Dataset/MFNet/"
+  dataset_name: "FMBEnhance"
+  image_height: 600
+  image_width: 800
+  root: "/data1/ZXH/NAS_MRMTL_project/Dataset/FMB/"
   path1: "visible"
   path1_HQ: "visible_HQ"
   path1_suffix: ".png"
@@ -21,7 +19,7 @@ datasets:
   label_suffix: ".png"
   split: null
   ignore_index: 255
-  class_names: ['unlabeled', 'car', 'person', 'bike', 'curve', 'car_stop', 'guardrail', 'color_cone', 'bump']
+  class_names: ['background', 'Road', 'Sidewalk', 'Building', 'Lamp', 'Sign', 'Vegetation', 'Sky', 'Person', 'Car', 'Truck', 'Bus', 'Motorcycle', 'Bicycle', 'Pole']
 
 num_stages: 4
 encoder:
@@ -39,13 +37,6 @@ encoder:
   attn_drop_rate: 0.0
   drop_path_rate: 0.1
 
-nddr:
-  SEARCHSPACE: ''
-  NDDR_TYPE: 'cross_attention'
-  NDDR_BN_TYPE: 'default'
-  BATCH_NORM_MOMENTUM: 0.05
-  INIT: [1.0, 0.0]
-
 decoder:
   channels: [64, 128, 320, 512]
   embed_dim: 512
@@ -53,16 +44,14 @@ decoder:
 optimizer: "AdamW"
 
 weights:
-  FACTOR: 1
-  task1: [1, 1]
   task2: [0.5, 2, 2]
 
 loss:
-  patch_size: 64
-  method: "MFNet"
+  patch_size: 80
+  method: "FMB"
 
 train:
-  lr: 5e-6
+  lr: 6e-5
   lr_power: 0.9
   momentum: 0.9
   weight_decay: 0.01
@@ -71,8 +60,11 @@ train:
   num_workers: 4
   
   nepochs: 5000
-  warm_up_epoch: 0
+  warm_up_epoch: 10
   train_scale_array: [0.5, 0.75, 1, 1.25, 1.5, 1.75]
+  Mask:
+   size: 40
+   strategy: "none"
 
   fix_bias: True
   bn_eps: 1e-3
@@ -82,8 +74,8 @@ eval:
   eval_stride_rate: 2/3
   eval_scale_array: [1]
   eval_flip: False
-  eval_crop_size: [480, 640]
+  eval_crop_size: [600, 800]
 
 checkpoint:
-  start_epoch: 0
-  step: 2
+  start_epoch: 50
+  step: 5
